raffia/tests/error/selectors/invalid-attr-5.snap
---
source: raffia/tests/error.rs
---
error: expect token `]`, but `<string>` received
  ┌─ invalid-attr-5.css:1:14
  │
1 │ [href="test" "z"] {}
  │              ^^^


